p2/conf/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: paulbouwer/hello-kubernetes:1.10
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: app-one
  type: ClusterIP
